test fix pipeline

--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -1,7 +1,5 @@
 name: Build the flutter version of the AmjDesk
-permissions:
-  contents: write
-  
+
 on:
   workflow_call:
     inputs:
@@ -193,6 +191,8 @@ jobs:
 
       - name: Publish Release
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         if: env.UPLOAD_ARTIFACT == 'true'
         with:
           prerelease: true
@@ -316,6 +316,8 @@ jobs:
 
       - name: Publish Release
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         if: env.UPLOAD_ARTIFACT == 'true'
         with:
           prerelease: true
@@ -390,6 +392,8 @@ jobs:
       - name: Publish DMG package
         if: env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -700,6 +704,8 @@ jobs:
       - name: Publish DMG package
         if: env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -737,6 +743,8 @@ jobs:
 
       - name: Publish unsigned app
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -939,6 +947,8 @@ jobs:
       - name: Publish signed apk package
         if: env.ANDROID_SIGNING_KEY != null && env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -948,6 +958,8 @@ jobs:
       - name: Publish unsigned apk package
         if: env.ANDROID_SIGNING_KEY == null && env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -1216,6 +1228,8 @@ jobs:
       - name: Publish debian/rpm package
         if: env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -1252,6 +1266,8 @@ jobs:
       - name: Publish archlinux package
         if: matrix.job.arch == 'x86_64' && env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -1422,6 +1438,8 @@ jobs:
       - name: Publish debian package
         if: env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -1478,6 +1496,8 @@ jobs:
       - name: Publish appimage package
         if: env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -1568,6 +1588,8 @@ jobs:
 
       - name: Publish flatpak package
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
@@ -1632,6 +1654,8 @@ jobs:
       - name: Publish web
         if: env.UPLOAD_ARTIFACT == 'true'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AMJ_TOKEN }}
         with:
           prerelease: true
           tag_name: ${{ env.TAG_NAME }}
